--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,10 @@
     "paths": {
       "@src/*": ["src/*"]
     }
-  }
+  },
+  "include": ["src"],
+  "exclude": [
+    "node_modules", "dist"
+  ]
+
 }
