--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 PORT=3000
 
 <--------- DATABASE --------->
-DATABASE_TYPE=postgres
+DATABASE_HOST=john.db.elephantsql.com
 DATABASE_PORT=5432
-DATABASE_USER=kha
-DATABASE_PASSWORD=628638
-DATABASE_DB=Roomify
+DATABASE_USER=ntkgukfc
+DATABASE_PASSWORD=9BCLmF5L8fyXFsjqmWuzhBfWOvVG5E-V
+DATABASE_DB=ntkgukfc
 
 < -------- BCRYPT ----------->
 SALT_ROUNDS=10
