--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
@@ -44,6 +45,7 @@
     "cloudinary": "^1.23.0",
     "config": "^3.3.1",
     "dotenv": "^8.2.0",
+    "firebase-admin": "^9.2.0",
     "lodash": "^4.17.19",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
