--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 PORT=3000
 
 <--------- DATABASE --------->
-DATABASE_HOST=john.db.elephantsql.com
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=ntkgukfc
-DATABASE_PASSWORD=9BCLmF5L8fyXFsjqmWuzhBfWOvVG5E-V
-DATABASE_DB=ntkgukfc
+DATABASE_USER=postgres
+DATABASE_PASSWORD=123456
+DATABASE_DB=roomify
 
 < -------- BCRYPT ----------->
 SALT_ROUNDS=10
