--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 PORT=3000
 
 <--------- DATABASE --------->
-DATABASE_TYPE=postgres
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=kha
-DATABASE_PASSWORD=628638
-DATABASE_DB=Roomify
+DATABASE_USER=postgres
+DATABASE_PASSWORD=123456
+DATABASE_DB=roomify
 
 < -------- BCRYPT ----------->
 SALT_ROUNDS=10
